--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,11 @@
     <string name="work_in_background_enabled">Work in background is enabled. Good job!</string>
     <string name="browser_not_found">Web browser not found</string>
     <string name="browser_not_found_open_link_manually">UnlockMaster could not find the web browser application to open the link. If you believe the browser is installed - please, open the link manually.</string>
+    <string name="user_interface_theme">User interface theme</string>
+    <string name="user_interface_theme_description">Select between dark and light theme to change the appearance of UnlockMaster or let your system theme be the theme for the app:</string>
+    <string name="light_theme">Light theme</string>
+    <string name="dark_theme">Dark theme</string>
+    <string name="system_theme">System theme</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
