--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,9 @@
     <string name="backup_considerations_2">The backup restoration cannot be performed when the unlock counter is paused - you have to unpause it first on the home screen.</string>
     <string name="notify_over_100">Notify over 100%</string>
     <string name="notify_over_100_description">UnlockMaster will send mobilizing notifications even after reaching your unlock limit.</string>
+    <string name="setting_not_saved">Settings not saved</string>
+    <string name="setting_not_saved_description">The settings you have changed have not been saved. Click the \"Confirm\" button to save the changes.</string>
+    <string name="exit">Exit</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
